--- a/package.json
+++ b/package.json
@@ -9,16 +9,41 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto-condensed": "^0.2.2",
+    "@expo-google-fonts/roboto-slab": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "@types/react": "^17.0.41",
+    "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.1",
-    "react-native-web": "0.17.7"
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-gesture-handler": "~2.2.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-web": "0.17.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
+    "@types/react-native-datepicker": "^1.7.1",
+    "@types/styled-components": "^5.1.25",
+    "@types/styled-components-react-native": "^5.1.3",
+    "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "~17.0.21"
   },
   "private": true
 }
